Skip to content

DVD PAUSING

PAUSING a DVD playback makes CPU usage of vlc.exe process 5%

video output becomes BLANK and

Unlimited "late picture skipped" warnings

When STOP is pressed during a PAUSED video

video output is stuck and

Unlimited "late picture skipped"

Unlimited "debug: dying input"

no way to stop playback

closing vlc makes vlc.exe stuck in process list

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information