Add support for media-specific VLC options. Closes #1961.

Syntax: append options to the media path or URL, after a '##' separator.
Use space between options.
Example:
  movie_texture "video.mp4##no-audio"
This code will call libvlc_add_option(media, "no-audio") then play "video.mp4".

Note:
- Apparently, video filters do not work with the vmem video output.
- The visualizer (audio-visual option) is broken with VLC 2.0 but works fine
  with VLC 1.12:
  movie_texture "sax.mp3##audio-visual=visual effect-list=spectrum", 800, 600